--- a/views/layout.html
+++ b/views/layout.html
@@ -5,7 +5,7 @@
   <title>{% block title %}My Site{% endblock %}</title>
 
   {% block head %}
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="stylesheets/site.css">
   {% endblock %}
 </head>
 <body>
