--- a/views/layout.html
+++ b/views/layout.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %}My Site{% endblock %}</title>
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   {% block head %}
   <link rel="stylesheet" href="/bower/bootstrap/dist/css/bootstrap.min.css" />
