--- a/views/layout.html
+++ b/views/layout.html
@@ -15,6 +15,8 @@
   {% endblock %}
 </head>
 <body>
-  {% block content %}{% endblock %}
+  <div class="container">
+    {% block content %}{% endblock %}
+  </div>
 </body>
 </html>
