--- a/views/layout.html
+++ b/views/layout.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}My Site{% endblock %}</title>
+  <title>{% block title %}Fetch{% endblock %}</title>
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
