Hyperlink to aggregate.

--- a/views/admin.html
+++ b/views/admin.html
@@ -10,9 +10,7 @@
   <div class="container">
     <h1>Fetch Admin</h1>
     <p>
-      <form action="/aggregate" method="POST">
-        <button class="btn" type="submit">Pull in Latest Dogs</button>
-      </form>
+      <a class="btn btn-default btn-block btn-lg" href="/aggregate">Get Latest Dogs</a>
     </p>
   </div>
 {% endblock %}
