--- a/views/layout.html
+++ b/views/layout.html
@@ -42,12 +42,16 @@
 
   <div class="container">
     <header id="main-header">
-      {% block menuleft %}
-        <a id="main-menu-link" href="#">Menu</a>
-      {% endblock %}
-      <h1>{% block title %}Fetch{% endblock %}</h1>
-      {% block menuright %}
-      {% endblock %}
+      <div id="main-header-left-btn">
+        {% block menuleft %}
+          <a id="main-menu-link" class="btn btn-default" href="#">Menu</a>
+        {% endblock %}
+      </div>
+      <div id="main-header-right-btn">
+        {% block menuright %}
+        {% endblock %}
+      </div>
+      <div id="main-header-title">{% block title %}Fetch{% endblock %}</div>
     </header>
 
     {% block content %}{% endblock %}
