--- a/views/layout.html
+++ b/views/layout.html
@@ -40,6 +40,8 @@
     </ul>
   </nav>
 
+  {% block panel %}{% endblock %}
+
   <div class="container">
     <header id="main-header">
       <div id="main-header-left-btn">
