Switch promoted image to smaller version

--- a/views/browse.html
+++ b/views/browse.html
@@ -17,7 +17,7 @@
 <div class="pet-container">
   <div class="pet-summary">
     <div class="pet-images">
-      <img src="/images/promoted1.png" />
+      <img src="/images/promoted1.jpg" />
       <!-- <img src="/images/promoted2.jpg" /> -->
     </div>
     <div class="pet-info">
@@ -57,6 +57,7 @@
         <div class="section">
           <h2>Breed</h2>
           <select>
+            <option>Any</option>
             <option>Golden</option>
             <option>Bulldog</option>
             <option>Something else</option>
