--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
   </p>
 
   <div class="promoted">
-    <img src="/images/promoted1.png" />
+    <img src="/images/promoted1.jpg" />
     <img src="/images/promoted2.jpg" />
   </div>
 
