--- a/views/browse.html
+++ b/views/browse.html
@@ -25,7 +25,7 @@
     </div>
     <div class="pet-actions">
       <a href="#">Favorite</a>
-      <a href="#">Info</a>
+      <a href="/info/12345">Info</a>
       <a href="#">Share</a>
     </div>
   </li>
