Finish filter form layout

--- a/views/browse.html
+++ b/views/browse.html
@@ -65,16 +65,40 @@
       <li>
         <div class="section">
           <h2>Age</h2>
+          <div id="age">
+            <input type="radio" name="age" id="age-puppy" />
+            <label for="age-puppy">Puppy</label>
+            <input type="radio" name="age" id="age-adult" />
+            <label for="age-adult">Adult</label>
+            <input type="radio" name="age" id="age-senior" />
+            <label for="age-senior">Senior</label>
+          </div>
         </div>
       </li>
       <li>
         <div class="section">
           <h2>Location</h2>
+          <a href="#" id="current-location" class="btn btn-default">◎</a>
+          <input type="text" value="Pittsburgh, PA" />
+          <div id="distance">
+            <input type="radio" name="distance" id="distance-25" />
+            <label for="distance-25"> 25 </label>
+            <input type="radio" name="distance" id="distance-50" />
+            <label for="distance-50"> 50 </label>
+            <input type="radio" name="distance" id="distance-100" />
+            <label for="distance-100"> 100+ </label>
+          </div>
         </div>
       </li>
       <li>
         <div class="section">
           <h2>Sex</h2>
+          <div id="sex">
+            <input type="radio" name="sex" id="sex-female" />
+            <label for="sex-female">Female</label>
+            <input type="radio" name="sex" id="sex-male" />
+            <label for="sex-male">Male</label>
+          </div>
         </div>
       </li>
     </ul>
