--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -22,6 +22,10 @@ body { }
   font-size: 20px;
 }
 
+.mmenu a.btn-default {
+  background-color: white;
+}
+
 #main-header {
   padding: .5em;
 }
@@ -78,4 +82,6 @@ body.index #main-header {
   padding-left: 1em;
   padding-bottom: 1em;
 }
-
+#filter-settings #distance {
+  margin-top: .5em;
+}
