--- a/views/admin.html
+++ b/views/admin.html
@@ -9,7 +9,16 @@
 {% block content %}
   <div class="container">
     <p>
-      <a class="btn btn-default btn-block btn-lg" href="/aggregate">Get Latest Dogs</a>
+      {% if message %}
+        <div class="alert alert-dismissable alert-success">
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+          {{ message }}
+        </div>
+      {% endif %}
+
+      <form action="aggregate" method="POST">
+        <button type="submit" class="btn btn-default btn-block btn-lg">Get Latest Dogs</button>
+      </form>
     </p>
   </div>
 {% endblock %}
