--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -1,4 +1,55 @@
 body { }
+/*
+Fetch color scheme
+	red: 		#d85339 - headers
+	grey: 		#52504c - text
+	tan:		#e7e6e2 - background
+	med tan:	#cccccc - borders
+	gold:		#fbd645 - verified
+*/
+
+
+
+body {
+	background-color: #e7e6e2;
+	font-family: "Open Sans", helvetica, arial, sans-serif;
+	color: #52504c;
+}
+h1 {
+	color: #d85339;
+	font-family: "Bree", helvetica, arial, sans-serif;
+}
+
+/* for devices with normal screens */
+h1.logo {
+	margin: 0 auto;
+	width: 232px;
+	height: 86px;
+	background: url('../images/fetch_logo.png') top center no-repeat;
+	text-indent: -9999px;
+	display: block;
+}
+/* for high-resolution devices */
+@media only screen and (-Webkit-min-device-pixel-ratio: 1.5),
+only screen and (-moz-min-device-pixel-ratio: 1.5),
+only screen and (-o-min-device-pixel-ratio: 3/2),
+only screen and (min-device-pixel-ratio: 1.5) {
+    h1.logo {
+		margin: 0 auto;
+		width: 464px;
+		height: 171px;
+		background: url('../images/fetch_logo_2x.png') top center no-repeat;
+		background-size: ;
+		text-indent: -9999px;
+		display: block;
+	}
+}
+.pitch {
+	
+}
+a.button {
+	font-family: "Bree", helvetica, arial, sans-serif;
+}
 
 .container {
   padding: 0;
