Use large buttons.

--- a/views/index.html
+++ b/views/index.html
@@ -20,8 +20,8 @@
   </div>
 
   <div class="row buttons">
-	  <div class="col-xs-6"><a href="/login" class="btn btn-primary btn-block">Sign In</a></div>
-	  <div class="col-xs-6"><a href="/browse" class="btn btn-success btn-block">Get Started</a></div>
+	  <div class="col-xs-6"><a href="/login" class="btn btn-primary btn-block btn-lg">Sign In</a></div>
+	  <div class="col-xs-6"><a href="/browse" class="btn btn-success btn-block btn-lg">Get Started</a></div>
 	</div>
 
 {% endblock %}
