basic css changes

--- a/views/layout.html
+++ b/views/layout.html
@@ -60,6 +60,8 @@
     </header>
 
     {% block content %}{% endblock %}
+    
+    <footer>Copyright &copy; 2013 Fetch</footer>
   </div>
 
 </body>
