--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -39,15 +39,25 @@ only screen and (min-device-pixel-ratio: 1.5) {
 		height: 171px;
 		background: url('../images/fetch_logo_2x.png') top center no-repeat;
 		background-size: ;
+		background-size: 232px 86px;
 		text-indent: -9999px;
 		display: block;
 	}
 }
 .pitch {
 	
+	margin: 20px auto;
+	width: 70%;
+	font-size: 16px;
+	text-align: center;
+	line-height: 24px;
 }
 a.button {
 	font-family: "Bree", helvetica, arial, sans-serif;
+}
+footer {
+	margin: 40px 0;
+	text-align: center;
 }
 
 .container {
