--- a/views/index.html
+++ b/views/index.html
@@ -20,8 +20,12 @@
   </div>
 
   <div class="row buttons">
+  
+  <div class="buttons">
 	  <div class="col-xs-6"><a href="/login" class="btn btn-primary btn-block">Sign In</a></div>
 	  <div class="col-xs-6"><a href="/browse" class="btn btn-success btn-block">Get Started</a></div>
 	</div>
+  </div>
+  <div class="clearfix visible-xs"></div>
 
 {% endblock %}
