--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -28,6 +28,14 @@ h1.logo {
 	text-indent: -9999px;
 	display: block;
 }
+#featured {
+	margin: 0 auto;
+	width: 320px;
+	height: 200px;
+	background: url('../images/featured.png') top center no-repeat;
+	text-indent: -9999px;
+	display: block;
+}
 /* for high-resolution devices */
 @media only screen and (-Webkit-min-device-pixel-ratio: 1.5),
 only screen and (-moz-min-device-pixel-ratio: 1.5),
@@ -39,6 +47,15 @@ only screen and (min-device-pixel-ratio: 1.5) {
 		height: 171px;
 		background: url('../images/fetch_logo_2x.png') top center no-repeat;
 		background-size: 232px 86px;
+		text-indent: -9999px;
+		display: block;
+	}
+	#featured {
+		margin: 0 auto;
+		width: 320px;
+		height: 200px;
+		background: url('../images/featured_2x.png') top center no-repeat;
+		background-size: 320px 200px;
 		text-indent: -9999px;
 		display: block;
 	}
