--- a/views/index.html
+++ b/views/index.html
@@ -14,10 +14,7 @@
 
   <p class="pitch">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-  <div class="promoted">
-    <img src="/images/promoted1.jpg" />
-    <img src="/images/promoted2.jpg" />
-  </div>
+  <div id="featured"></div>
   
   <div class="buttons">
 	  <div class="col-xs-6"><a href="/login" class="btn btn-primary btn-block">Sign In</a></div>
