--- a/views/browse.html
+++ b/views/browse.html
@@ -23,9 +23,9 @@
       Lucy
     </div>
     <div class="pet-actions">
-      <a href="#">Favorite</a>
-      <a href="/info/12345">Info</a>
-      <a href="#">Share</a>
+      <a href="#" class="pet-favorite-link">Favorite</a>
+      <a href="#" class="pet-info-link">Info</a>
+      <a href="#" class="pet-share-link">Share</a>
     </div>
   </li>
 </ul>
@@ -41,11 +41,11 @@
         <div class="section">
           <h2>Size</h2>
           <div id="size">
-            <input type="radio" name="size" id="size-small" />
+            <input type="radio" name="size" id="size-small" value="S" />
             <label for="size-small">Small</label>
-            <input type="radio" name="size" id="size-medium" />
+            <input type="radio" name="size" id="size-medium" value="M" />
             <label for="size-medium">Medium</label>
-            <input type="radio" name="size" id="size-large" />
+            <input type="radio" name="size" id="size-large" value="L" />
             <label for="size-large">Large</label>
           </div>
         </div>
@@ -53,11 +53,8 @@
       <li>
         <div class="section">
           <h2>Breed</h2>
-          <select>
-            <option>Any</option>
-            <option>Golden</option>
-            <option>Bulldog</option>
-            <option>Something else</option>
+          <select id="breed">
+            <option value="any">Any</option>
           </select>
         </div>
       </li>
@@ -65,11 +62,11 @@
         <div class="section">
           <h2>Age</h2>
           <div id="age">
-            <input type="radio" name="age" id="age-puppy" />
+            <input type="radio" name="age" id="age-puppy" value="Young" />
             <label for="age-puppy">Puppy</label>
-            <input type="radio" name="age" id="age-adult" />
+            <input type="radio" name="age" id="age-adult" value="Adult" />
             <label for="age-adult">Adult</label>
-            <input type="radio" name="age" id="age-senior" />
+            <input type="radio" name="age" id="age-senior" value="Senior" />
             <label for="age-senior">Senior</label>
           </div>
         </div>
@@ -78,7 +75,8 @@
         <div class="section">
           <h2>Location</h2>
           <a href="#" id="current-location" class="btn btn-default">◎</a>
-          <input type="text" value="Pittsburgh, PA" />
+          <input id="location" type="text" value="Pittsburgh, PA" />
+          <h2>Distance</h2>
           <div id="distance">
             <input type="radio" name="distance" id="distance-25" />
             <label for="distance-25"> 25 </label>
@@ -93,9 +91,9 @@
         <div class="section">
           <h2>Sex</h2>
           <div id="sex">
-            <input type="radio" name="sex" id="sex-female" />
+            <input type="radio" name="sex" id="sex-female" value="F" />
             <label for="sex-female">Female</label>
-            <input type="radio" name="sex" id="sex-male" />
+            <input type="radio" name="sex" id="sex-male" value="M" />
             <label for="sex-male">Male</label>
           </div>
         </div>
