--- a/views/info.html
+++ b/views/info.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block menuleft %}
-  <a id="back-link" class="btn btn-default" href="#">Back</a>
+  <a id="back-link" class="btn btn-default" href="/browse">Back</a>
 {% endblock %}
 
 {% block menuright %}
