--- a/views/layout.html
+++ b/views/layout.html
@@ -33,7 +33,7 @@
 
   
   <nav id="main-menu">
-    <h1><a href="/">Fetch!</a></h1>
+    <a href="/"><h1 class="logo">Fetch!</h1></a>
     <ul>
       <li><a href="/browse">Browse</a></li>
       <li><a href="/favorites">My Favorites</a></li>
