Add cross-browser localStorage polyfill from Mozilla.

--- a/views/layout.html
+++ b/views/layout.html
@@ -17,6 +17,7 @@
   <script src="/bower/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="/bower/jquery-ui/ui/minified/jquery-ui.min.js"></script>
   <script src="/bower/jquery-mmenu/jquery.mmenu.min.js"></script>
+  <script src="/javascript/localStorage.js"></script>
   <script src="/javascript/main.js"></script>
   {% endblock %}
   <script type="text/javascript">
