Toggle favorites with localStorage.

--- a/views/browse.html
+++ b/views/browse.html
@@ -23,6 +23,7 @@
       Lucy
     </div>
     <div class="pet-actions">
+      <!-- TODO: Make Favorite a checkbox -->
       <a href="#" class="pet-favorite-link">Favorite</a>
       <a href="#" class="pet-info-link">Info</a>
       <a href="#" class="pet-share-link">Share</a>
