Add Reserve link to pet info page

--- a/views/info.html
+++ b/views/info.html
@@ -24,6 +24,9 @@
   </div>
   <div class="pet-breed">
   </div>
+
+  <a id="reserve-pet" href="#">Reserve</a>
+
   <div class="pet-description">
   </div>
 
