--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -8,8 +8,8 @@ Fetch color scheme
 */
 
 
-
 body {
+	padding-top: 50px;
 	background-color: #e7e6e2;
 	font-family: "Open Sans", helvetica, arial, sans-serif;
 	color: #52504c;
@@ -17,6 +17,18 @@ body {
 h1 {
 	color: #d85339;
 	font-family: "Bree", helvetica, arial, sans-serif;
+}
+nav .btn-link {
+	color: #52504c;
+}
+body.browse #main-header-title {
+	margin: 0 auto;
+	width: 108px;
+	height: 40px;
+	background: url('../images/fetch_logo.png') top center no-repeat;
+	background-size: 108px 40px;
+	text-indent: -9999px;
+	display: block;
 }
 
 /* for devices with normal screens */
@@ -41,10 +53,10 @@ h1.logo {
 only screen and (-moz-min-device-pixel-ratio: 1.5),
 only screen and (-o-min-device-pixel-ratio: 3/2),
 only screen and (min-device-pixel-ratio: 1.5) {
-    h1.logo {
+		h1.logo {
 		margin: 0 auto;
-		width: 464px;
-		height: 171px;
+		width: 232px;
+		height: 86px;
 		background: url('../images/fetch_logo_2x.png') top center no-repeat;
 		background-size: 232px 86px;
 		text-indent: -9999px;
@@ -76,105 +88,154 @@ footer {
 }
 
 .container {
-  padding: 0;
+	padding: 0;
 }
 
 .mmenu {
-  /* padding: .5em; */
+	/* padding: .5em; */
 }
-
 .mmenu ul {
-  padding-top: 0;
+	padding-top: 0;
 }
-
 .mmenu h1 {
-  margin-left: 1em;
+	margin-left: 1em;
 }
-
 .mmenu h1,
 .mmenu h1 a {
-  color: rgba( 255, 255, 255, 0.6 );
-  font-size: 20px;
+	color: rgba( 255, 255, 255, 0.6 );
+	font-size: 20px;
 }
-
 .mmenu a.btn-default {
-  background-color: white;
+	background-color: white;
 }
-
 #main-header {
-  padding: .5em;
+	padding: .5em;
+	opacity: .97;
 }
-
 #main-header-left-btn {
-  float: left;
+float: left;
 }
 #main-header-right-btn {
-  float: right;
+	float: right;
 }
 
 #main-header-title {
-  font-size: 2em;
-  color: red;
-  text-align: center;
-  margin: auto 2em;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+	font-size: 2em;
+	color: red;
+	text-align: center;
+	margin: auto 2em;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 /* Hide header on landing page */
 body.index #main-header {
-  display: none;
+	display: none;
 }
 
 .promoted {
 }
 
 .promoted img {
-  max-width: 500px;
-  width: 49%;
-  display: block;
-  float: left;
-  overflow: hidden;
-  margin-bottom: 1em;
-  margin-left: .66666%;
+	max-width: 500px;
+	width: 49%;
+	display: block;
+	float: left;
+	overflow: hidden;
+	margin-bottom: 1em;
+	margin-left: .66666%;
 }
 
 .buttons {
-  margin-top: 1em;
+	margin-top: 1em;
 }
 
 /* Browse */
 .pet-container {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+.summary {
+	margin: 0 0 12px;
+	height: 240px;
+	background-color: #fff;
+	-webkit-box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.25);
+-moz-box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.25);
+box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.25);
+}
+.pet-container .pet-images {
+	width: 100%;
+	height: 180px;
+	overflow: hidden;
+	display: block;
+    position: relative;
+}
+.pet-images::before {
+    display: block;
+    content:'';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.7);
+	-moz-box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.7);
+	box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.7);
 }
 .pet-container .pet-images img {
-  width: 100%;
+	width: 100%;
+	display: block;
 }
-
-.pet-container .pet-images {
+.pet-actions {
+	margin: -25px 0 0;
+	height: 50px;
+	display: block;
+	font-size: 18px;
+	text-align: center;
 }
-
+.pet-actions .btn {
+	font-size: 18px;
+}
+.pet-favorite-link, .pet-share-link {
+	background-image: url('../images/divider.png');
+	background-repeat: no-repeat;
+}
+.pet-favorite-link {
+	padding-right: 20px;
+	background-position: right bottom;
+}
+.pet-share-link {
+	padding-left: 20px;
+	background-position: left bottom;
+}
+h2 {
+	margin: 0 0 10px 8px;
+	position: relative;
+	bottom: 32px;
+	left: 0;
+	color: #e7e6e2;
+	font-family: "Bree", helvetica, arial, sans-serif;
+	font-size: 24px;
+	z-index: 999;
+}
 #filter-settings h1 {
-  padding-left: 65px;
+	padding-left: 65px;
 }
 #filter-settings .section {
-  padding-left: 1em;
-  padding-bottom: 1em;
+	padding-left: 1em;
+	padding-bottom: 1em;
 }
 #filter-settings #distance {
-  margin-top: .5em;
+	margin-top: .5em;
 }
 #filter-settings #current-location {
-  padding: 2px 2px;
-  font-size: 1.4em;
-  line-height: 1em;
+	padding: 2px 2px;
+	font-size: 1.4em;
+	line-height: 1em;
 }
 
 /* Info */
 .breeder-map {
-  width: 300px;
-  margin: auto;
+	width: 300px;
+	margin: auto;
 }
