--- a/views/layout.html
+++ b/views/layout.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="/bower/jquery-mmenu/mmenu.css" />
   <link rel="stylesheet" href="/bower/jquery-ui/themes/base/jquery-ui.css" />
   <link rel="stylesheet" href="/bower/jquery-ui/themes/smoothness/jquery-ui.css" />
+  <link rel="stylesheet" href="/stylesheets/fetch-icons.css">
   <link rel="stylesheet" href="/stylesheets/site.css" />
 
   <script src="/bower/jquery/jquery.min.js"></script>
@@ -36,8 +37,9 @@
     <h1><a href="/">Fetch!</a></h1>
     <ul>
       <li><a href="/browse">Browse</a></li>
-      <li><a href="/favorites">My Favorites</a></li>
-      <li><a href="/profile">My Profile</a></li>
+      <li><a href="/favorites">Favorites</a></li>
+      <li><a href="/profile">Profile</a></li>
+      <li><a href="/notifications">Notifications</a></li>
       <li><a href="/about">About</a></li>
       <li><a href="/contact">Contact</a></li>
     </ul>
@@ -46,18 +48,18 @@
   {% block panel %}{% endblock %}
 
   <div class="container">
-    <header id="main-header">
-      <div id="main-header-left-btn">
+  	<nav id="main-header" class="navbar navbar-default navbar-fixed-top" role="navigation">
+	  <div id="main-header-left-btn">
         {% block menuleft %}
-          <a id="main-menu-link" class="btn btn-default" href="#">Menu</a>
+          <a id="main-menu-link" class="btn btn-link" href="#"><i class="icon-menu-1"></i></a>
         {% endblock %}
       </div>
       <div id="main-header-right-btn">
         {% block menuright %}
         {% endblock %}
       </div>
-      <div id="main-header-title">{% block title %}Fetch{% endblock %}</div>
-    </header>
+      <h1 id="main-header-title">{% block title %}Fetch{% endblock %}</h1>
+	</nav>
 
     {% block content %}{% endblock %}
     
