Add pitch to landing page

--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
 
   <h1 class="logo">Fetch</h1>
 
-  <p class="pitch">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <p class="pitch">Fetch is revolutionizing the process of adopting a dog.</p>
 
   <div id="featured"></div>
   
