Change login page title to 'Login'

--- a/views/login.html
+++ b/views/login.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block title %}Login to Fetch{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block head %}
   {% parent %}
