Add image to dog info page

--- a/views/info.html
+++ b/views/info.html
@@ -18,6 +18,9 @@
   
 {% block content %}
 <div class="pet">
+  <div class="pet-image">
+  </div>
+
   <div class="pet-name">
   </div>
   <div class="pet-age-sex">
@@ -29,9 +32,6 @@
 
   <div class="pet-description">
   </div>
-
-  {# <div class="pet-image"> #}
-  {# </div> #}
 
   <div class="breeder">
     <div class="breeder-name">
