Match name of profile page to menu item

--- a/views/profile.html
+++ b/views/profile.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block title %}My Profile{% endblock %}
+{% block title %}Profile{% endblock %}
 
 {% block class %}user{% endblock %}
 
