--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -213,7 +213,7 @@ box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.25);
 	background-position: right bottom;
 }
 .pet-favorite-link.favorited {
-  color: red;
+  color: #d85339;
 }
 .pet-share-link {
 	padding-left: 20px;
