--- a/views/browse.html
+++ b/views/browse.html
@@ -25,7 +25,7 @@
 	      <a href="#" class="pet-favorite-link btn btn-link"><i class="icon-heart-filled"></i></a>
 	    </div>
 	    <div class="col-xs-6">
-	      <a href="#" class="pet-info-link">info</a>
+	      <a href="#" class="pet-info-link btn btn-link">more info</a>
 	     </div>
 	     <div class="col-xs-3">
 	      <a href="#" class="pet-share-link btn btn-link"><i class="icon-export"></i></a>
