--- a/views/layout.html
+++ b/views/layout.html
@@ -36,10 +36,10 @@
   <nav id="main-menu">
     <a href="/"><h1 class="logo">Fetch!</h1></a>
     <ul>
-      <li><a href="/browse">Browse</a></li>
-      <li><a href="/favorites">Favorites</a></li>
-      <li><a href="/profile">Profile</a></li>
-      <li><a href="/notifications">Notifications</a></li>
+      <li><a href="/browse"><i class="icon-guidedog"></i> <span class="i-name">Browse Dogs</span></a></li>
+      <li><a href="/favorites"><i class="icon-heart-filled"></i> <span class="i-name">My Favorites</span></a></li>
+      <li><a href="/profile"><i class="icon-user"></i> <span class="i-name">My Profile</span></a></li>
+      <li><a href="/notifications"><i class="icon-bell"></i> <span class="i-name">My Notifications</span></a></li>
       <li><a href="/about">About</a></li>
       <li><a href="/contact">Contact</a></li>
     </ul>
