--- a/public/stylesheets/fetch-icons.css
+++ b/public/stylesheets/fetch-icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fetch-icons';
-  src: url('../font/fetch-icons.eot?79077190');
-  src: url('../font/fetch-icons.eot?79077190#iefix') format('embedded-opentype'),
-       url('../font/fetch-icons.woff?79077190') format('woff'),
-       url('../font/fetch-icons.ttf?79077190') format('truetype'),
-       url('../font/fetch-icons.svg?79077190#fetch-icons') format('svg');
+  src: url('../font/fetch-icons.eot?28910090');
+  src: url('../font/fetch-icons.eot?28910090#iefix') format('embedded-opentype'),
+       url('../font/fetch-icons.woff?28910090') format('woff'),
+       url('../font/fetch-icons.ttf?28910090') format('truetype'),
+       url('../font/fetch-icons.svg?28910090#fetch-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fetch-icons';
-    src: url('../font/fetch-icons.svg?79077190#fetch-icons') format('svg');
+    src: url('../font/fetch-icons.svg?28910090#fetch-icons') format('svg');
   }
 }
 */
@@ -57,11 +57,14 @@
 .icon-user:before { content: '\e805'; } /* '' */
 .icon-ok:before { content: '\e807'; } /* '' */
 .icon-cancel:before { content: '\e808'; } /* '' */
-.icon-search:before { content: '\e806'; } /* '' */
+.icon-plus:before { content: '\e809'; } /* '' */
 .icon-export:before { content: '\e804'; } /* '' */
+.icon-search:before { content: '\e806'; } /* '' */
 .icon-location:before { content: '\e80c'; } /* '' */
 .icon-direction:before { content: '\e80b'; } /* '' */
 .icon-compass:before { content: '\e80a'; } /* '' */
 .icon-menu-1:before { content: '\e801'; } /* '' */
+.icon-left-open:before { content: '\e80f'; } /* '' */
+.icon-right-open:before { content: '\e810'; } /* '' */
 .icon-target:before { content: '\e80d'; } /* '' */
-.icon-plus:before { content: '\e809'; } /* '' */
+.icon-bell:before { content: '\e811'; } /* '' */
