Forgot buttons for the form

--- a/views/profile.html
+++ b/views/profile.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block title %}Adoption Prefs{% endblock %}
+{% block title %}Adoption Profile{% endblock %}
 
 {% block class %}user{% endblock %}
 
@@ -14,7 +14,7 @@
   <div class="user-summary">
     <div class="user-info">
       <div class="well">
-        <form class="form-horizontal">
+        <form action="profile">
           <fieldset>
             <div class="form-group">
                 <label for="timeframe" class="control-label">I want a dog...</label>
@@ -104,10 +104,24 @@
                     </div>
                 </div>
             </div>
+            <div class="form-group">
+                <div class="col-xs-9 col-xs-offset-2">
+                    <input type="button" class="btn btn-default" id="cancel" value="Cancel" />
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </div>
           </fieldset>
         </form>
       </div>
   </div>
 </div>
+
+<script type="text/javascript">
+    $('document').ready(function(){
+        $('#cancel').click(function(){
+            window.location = 'browse';
+        });
+    });
+</script>
 
 {% endblock %}
