Add team photo to about page

--- a/views/about.html
+++ b/views/about.html
@@ -14,6 +14,10 @@
 {% block content %}
 
 <p>
+  <img src="/images/team.jpg" />
+</p>
+
+<p>
   Fetch makes it easier than ever to find a dog. It is an easy to use
   application to browse available dogs from shelters, rescue organizations
   and breeders that uses a first of its kind standardized pre-approval form.
