--- a/views/favorites.html
+++ b/views/favorites.html
@@ -28,6 +28,16 @@
     </li>
   </ul>
 
+  <div class="empty-favorites">
+    <p>
+      You have no favorites saved. 
+    </p>
+    <br />
+    <p>
+      <a class="btn btn-default" href="/browse">Browse</a>
+    </p>
+  </div>
+
   <script>
     {% if id %}
       var displayId = {{ id }};
