--- a/views/browse.html
+++ b/views/browse.html
@@ -17,8 +17,10 @@
 
 <ul class="pet-container">
   <li id="pet-template" class="pet summary" style="display: none;">
-    <div class="pet-images">
-    </div>
+    <a href="" class="pet-info-link">
+    	<div class="pet-images">
+		</div>
+	</a>
     <h2 class="pet-name">Lucy</h2>
     <div class="pet-actions row">
     	<div class="col-xs-3">
