--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -18,6 +18,7 @@ body {
 }
 .navbar-default {
 	background-color: #fff;
+	border-bottom: 1px solid #ccc;
 }
 h1 {
 	color: #d85339;
@@ -221,7 +222,7 @@ body.index #main-header {
 	background-position: right bottom;
 }
 .pet-favorite-link.favorited {
-  color: red;
+	color: #d85339;
 }
 .pet-share-link {
 	padding-left: 30px;
