--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -27,6 +27,11 @@ h1 {
 nav .btn-link {
 	color: #52504c;
 }
+.btn-primary, .btn-success {
+	font-family: "Bree", helvetica, arial, sans-serif;
+	font-size: 16px;
+	font-weight: 500;
+}
 body.browse #main-header-title {
 	margin: 0 auto;
 	width: 108px;
@@ -136,7 +141,7 @@ float: left;
 }
 #main-header-title {
 	font-size: 2em;
-	color: red;
+	color: #d85339;
 	text-align: center;
 	margin: auto 2em;
 	white-space: nowrap;
@@ -176,29 +181,36 @@ body.index #main-header {
 	background-color: #fff;
 	border-bottom: 1px solid #ccc;
 }
-.pet-container .pet-images {
+.pet-images, .pet-image {
 	width: 100%;
 	height: 180px;
 	overflow: hidden;
 	display: block;
     position: relative;
+    border-bottom: 1px solid #fff;
 }
-.pet-images::before {
+.pet-images::before, .pet-image::before {
     display: block;
     content:'';
     position: absolute;
     width: 100%;
     height: 100%;
-    -webkit-box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.7);
-	-moz-box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.7);
-	box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.7);
+    -webkit-box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.8);
+	-moz-box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.8);
+	box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.8);
+}
+article.breeder a {
+	margin: 0 0 12px;
 }
 .pet-actions .pet-info-link.btn {
 	font-size: 14px;
 }
-.pet-container .pet-images img {
+.pet-images img, .pet-image img {
 	width: 100%;
 	display: block;
+}
+article.info div {
+	margin: 8px 0;
 }
 .pet-actions {
 	margin: -25px 0 0;
@@ -267,6 +279,10 @@ text-indent: 0px;
 white-space: nowrap;
 line-height: 40px;
 }
+.mmenu * {
+	font-family: "Open Sans", helvetica, arial, sans-serif;
+	font-size: 20px;
+}
 
 /* Favorites */
 .favorite-container {
@@ -310,8 +326,9 @@ line-height: 40px;
 
 /* Info */
 .breeder-map {
-	width: 300px;
+	width: 100%;
 	margin: auto;
+	border: 1px solid #ccc;
 }
 .info article {
 	margin: 12px;
