--- a/views/layout.html
+++ b/views/layout.html
@@ -21,7 +21,7 @@
   <script src="/javascript/localStorage.js"></script>
   <script src="/javascript/main.js"></script>
   {% endblock %}
-  <script type="text/javascript">
+  <script>
     (function() {
       var config = {
         kitId: 'nnh2kvl',
