--- a/views/login.html
+++ b/views/login.html
@@ -18,6 +18,12 @@
 
       <form action="/login" method="POST">
         <input type="hidden" name="next" value="{{ next }}" />
+        <div class="row form-group">
+            <button class="btn btn-primary col-xs-12">Connect with Facebook</button>
+        </div>
+        <div class="form-group">
+            -- Or --
+        </div>
         <div class="form-group">
           <input type="text" name="email" class="form-control" value="{{ email }}" placeholder="Email" autofocus />
         </div>
