--- a/views/info.html
+++ b/views/info.html
@@ -26,7 +26,7 @@
 		<div class="pet-age-sex"></div>
 		<div class="pet-breed"></div>
 		
-		<a id="reserve-pet" class="col-xs-12 btn btn-success" href="#">Reserve</a>
+		<a id="reserve-pet" class="col-xs-12 btn btn-success btn-lg" href="#">Reserve</a>
 	</article>
 
 	<hr />
@@ -48,7 +48,7 @@
 		<div class="breeder-map">
 		  <iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps?t=m&amp;q=Animal+Advocates&amp;ie=UTF8&amp;hq=&amp;hnear=&amp;ll=40.438978,-80.034456&amp;spn=0.019598,0.025749&amp;z=14&amp;output=embed"></iframe><br /><small><a href="https://www.google.com/maps?t=m&amp;q=Animal+Advocates&amp;ie=UTF8&amp;hq=&amp;hnear=&amp;ll=40.438978,-80.034456&amp;spn=0.019598,0.025749&amp;z=14&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
 		</div>
-		
+		<br />
 		<a href="#" class="btn btn-primary col-xs-12"><i class="icon-direction"></i> Get Directions</a>
 	</article>
 	
