--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -287,7 +287,7 @@ body.browse .pet h2 {
 }
 #filter-settings #current-location {
 	padding: 2px 2px;
-	font-size: 1.4em;
+  font-size: 19px;
 	line-height: 1em;
 }
 .mmenu li > a {
@@ -301,6 +301,12 @@ line-height: 40px;
 .mmenu * {
 	font-family: "Open Sans", helvetica, arial, sans-serif;
 	font-size: 20px;
+}
+.mmenu .ui-buttonset *,
+.mmenu select,
+.mmenu input,
+.mmenu .btn {
+  font-size: 14px;
 }
 
 /* Favorites */
