--- a/views/login.html
+++ b/views/login.html
@@ -21,8 +21,10 @@
         <div class="row form-group">
             <button class="btn btn-primary col-xs-12">Connect with Facebook</button>
         </div>
-        <div class="form-group">
-            -- Or --
+        <div class="row form-group">
+            <div class="col-xs-12" style="text-align:center">
+                -- Or --
+            </div>
         </div>
         <div class="form-group">
           <input type="text" name="email" class="form-control" value="{{ email }}" placeholder="Email" autofocus />
