--- a/views/notifications.html
+++ b/views/notifications.html
@@ -13,8 +13,8 @@
   
 {% block content %}
 
-<p>
+<article>
     Tell us what type of dog that you're looking for and we will notify you when one is available.
-</p>
+</article>
 
 {% endblock %}
