--- a/views/profile.html
+++ b/views/profile.html
@@ -13,7 +13,7 @@
 <div class="user-container">
   <div class="user-summary">
     <div class="user-info">
-      <div class="well">
+      <article>
         <form action="profile">
           <fieldset>
             <div class="form-group">
@@ -108,7 +108,7 @@
 
           <a href="#" class="btn btn-primary">Save</a>
         </form>
-      </div>
+      </article>
   </div>
 </div>
 
