Make info popup a component and fix favorites display

--- a/views/browse.html
+++ b/views/browse.html
@@ -6,7 +6,8 @@
 
 {% block head %}
   {% parent %}
-  <script src="/javascript/browse.js" />
+  <script src="/javascript/browse.js"></script>
+  <script src="/javascript/info.js"></script>
 {% endblock %}
 
 {% block menuright %}
