--- a/views/favorites.html
+++ b/views/favorites.html
@@ -6,6 +6,8 @@
 
 {% block head %}
   {% parent %}
+  <script src="/javascript/browse.js"></script>
+  <script src="/javascript/info.js"></script>
   <script src="/javascript/favorites.js" />
 {% endblock %}
 
