--- a/views/favorites.html
+++ b/views/favorites.html
@@ -30,20 +30,18 @@
 
           <a href="#" class="favorite-item btn btn-success col-xs-12">Reserve</a>
         </div>
-        <div class="clearfix"></div>
+        <div class="clearfix visible-xs"></div>
       </a>
     </article>
   </section>
 
-  <div class="empty-favorites">
-    <p>
-      You have no favorites saved. 
-    </p>
+  <article class="empty-favorites">
+    <p>You currently have no favorites saved.</p>
     <br />
     <p>
-      <a class="btn btn-default" href="/browse">Browse</a>
+      <a class="btn btn-primary col-xs-12" href="/browse">Browse</a>
     </p>
-  </div>
+  </article>
 
   <script>
     {% if id %}
