--- a/views/profile.html
+++ b/views/profile.html
@@ -88,18 +88,18 @@
                 <div class="grid">
                     <div class="row">
                         <div class="col-xs-9 col-md-6">
-                            <input type="checkbox" id="products" /> Products
+                            <label for="products" class="big_ol_label"><input type="checkbox" id="products" /> Products</label>
                         </div>
                         <div class="col-xs-9 col-md-6">
-                            <input type="checkbox" id="insurance" /> Insurance
+                            <label for="insurance" class="big_ol_label"><input type="checkbox" id="insurance" /> Insurance
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-9 col-md-6">
-                            <input type="checkbox" id="food" /> Food
+                            <label for="food" class="big_ol_label"><input type="checkbox" id="food" /> Food
                         </div>
                         <div class="col-xs-9 col-md-6">
-                            <input type="checkbox" id="healthcare" /> Healthcare
+                            <label for="healthcare" class="big_ol_label"><input type="checkbox" id="healthcare" /> Healthcare
                         </div>
                     </div>
                 </div>
