--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -16,6 +16,9 @@ body {
 	font-family: "Open Sans", helvetica, arial, sans-serif;
 	color: #52504c;
 }
+.team {
+	
+}
 .navbar-default {
 	height: 56px;
 	background-color: #fff;
@@ -28,13 +31,16 @@ h1 {
 nav .btn-link {
 	color: #52504c;
 }
+.big_ol_label {
+	padding: 8px 0;
+}
 .btn-primary, .btn-success {
 	font-family: "Bree", helvetica, arial, sans-serif;
 	font-size: 16px;
 	font-weight: 500;
 }
 body.browse #main-header-title {
-	margin: 0 auto;
+	margin: 4px auto;
 	width: 108px;
 	height: 40px;
 	background: url('../images/fetch_logo.png') top center no-repeat;
@@ -144,7 +150,7 @@ float: left;
 	font-size: 2em;
 	color: #d85339;
 	text-align: center;
-	margin: auto 2em;
+	margin: 4px 2em;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -182,7 +188,7 @@ body.index #main-header {
 	background-color: #fff;
 	border-bottom: 1px solid #ccc;
 }
-.pet-images, .pet-image {
+.pet-images, .pet-image, .team {
 	width: 100%;
 	height: 180px;
 	overflow: hidden;
@@ -192,6 +198,10 @@ body.index #main-header {
 }
 .pet-image {
 	height: 220px;
+}
+.pet-image, .team {
+	margin: 0 0 20px;
+	height: 260px;
 }
 .urgent {
 	
@@ -209,6 +219,16 @@ body.index #main-header {
 	-moz-box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.8);
 	box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.8);
 }
+.team::before {
+    display: block;
+    content:'';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.5);
+	-moz-box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.5);
+	box-shadow: inset 1px -40px 60px -7px rgba(0,0,0,0.5);
+}
 .info article {
 	padding: 8px;
 	background-color: #fff;
@@ -224,7 +244,7 @@ article.breeder a {
 .pet-actions .pet-info-link.btn {
 	font-size: 14px;
 }
-.pet-images img, .pet-image img {
+.pet-images img, .pet-image img, .team img {
 	width: 100%;
 	display: block;
 }
@@ -259,7 +279,7 @@ article.info div {
 	padding-left: 30px;
 	background-position: left bottom;
 }
-body.browse .pet h2 {
+body.browse .pet h2, .about h2 {
 	margin: 0 0 10px 8px;
 	position: relative;
 	bottom: 32px;
@@ -269,11 +289,20 @@ body.browse .pet h2 {
 	font-size: 24px;
 	z-index: 999;
 }
-.info h2, .info h3, .favorites h2, .favorites h3 {
+.about h2 {
+	bottom: 52px;
+}
+.about article {
+	margin-top: -44px;
+}
+.info h2, .info h3, .favorites h2, .favorites h3, .about h3 {
 	margin: 0;
 	position: static;
 	color: #d85339;
 	font-family: "Bree", helvetica, arial, sans-serif;
+}
+.about h3 {
+	margin-bottom: 12px;
 }
 #filter-settings h1 {
 	padding-left: 65px;
@@ -328,8 +357,8 @@ line-height: 40px;
 .fav-image {
   display: block;
   float: left;
-  height: 200px;
-  width: 200px;
+  /* height: 200px; */
+  width: 100px;
   overflow: hidden;
 }
 .fav-image img {
@@ -337,7 +366,7 @@ line-height: 40px;
 }
 .favorite-description {
   display: block;
-  margin-left: 212px
+  margin-left: 108px;
 }
 .favorite-description h2 {
   color: #555;
@@ -346,7 +375,7 @@ line-height: 40px;
   color: #555;
 }
 .favorite-description p.available {
-  color: #2c6;
+  color: #61ad2e;
   font-weight: bold;
 }
 .favorite-description a {
