Fix contact information

--- a/views/contact.html
+++ b/views/contact.html
@@ -13,16 +13,8 @@
   
 {% block content %}
 
-<p>
-  Email: info@getfetch.co?
-  <br/>
-  Twitter?
-  <br/>
-  Facebook?
-  <br/>
-  Phone?
-  <br/>
-  Etc?
-</p>
+<article>
+  Email: info@getfetch.co
+</article>
 
 {% endblock %}
