--- a/views/login.html
+++ b/views/login.html
@@ -7,35 +7,35 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container">
-    <p>
-      {% if error %}
-        <div class="alert alert-dismissable alert-danger">
-          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-          {{ error }}
-        </div>
-      {% endif %}
+    <article>
+      <p>
+        {% if error %}
+          <div class="alert alert-dismissable alert-danger">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            {{ error }}
+          </div>
+        {% endif %}
 
-      <form action="/login" method="POST">
-        <input type="hidden" name="next" value="{{ next }}" />
-        <div class="row form-group">
-            <button class="btn btn-primary col-xs-12">Connect with Facebook</button>
-        </div>
-        <div class="row form-group">
-            <div class="col-xs-12" style="text-align:center">
-                -- Or --
-            </div>
-        </div>
-        <div class="form-group">
-          <input type="text" name="email" class="form-control" value="{{ email }}" placeholder="Email" autofocus />
-        </div>
-        <div class="form-group">
-          <input type="password" name="password" class="form-control" placeholder="Password" />
-        </div>
-        <div class="form-group">
-          <button class="btn btn-success" type="submit">Login</button>
-        </div>
-      </form>
-    </p>
-  </div>
+        <form action="/login" method="POST">
+          <input type="hidden" name="next" value="{{ next }}" />
+          <div class="form-group">
+              <button class="btn btn-primary col-xs-12">Connect with Facebook</button>
+          </div>
+          <div class="form-group">
+              <div class="col-xs-12" style="text-align:center">
+                  -- Or --
+              </div>
+          </div>
+          <div class="form-group">
+            <input type="text" name="email" class="form-control" value="{{ email }}" placeholder="Email" autofocus />
+          </div>
+          <div class="form-group">
+            <input type="password" name="password" class="form-control" placeholder="Password" />
+          </div>
+          <div class="form-group">
+            <button class="btn btn-success" type="submit">Login</button>
+          </div>
+        </form>
+      </p>
+    </article>
 {% endblock %}
